// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBarNavigation ACT theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-1kj7x2f-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17rox4w-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-1vncjte-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1kvu6yw-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-sacmns-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1kvu6yw-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u2wm85-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ACT_ET theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-12n5lcb-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1p3wczi-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-1vncjte-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-ju95kn-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-pecpg9-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-ju95kn-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1f6qusu-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ENCOURA theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-1bw8fsj-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-z3gr9l-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-1vncjte-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-s41scg-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-je0m3v-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-s41scg-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-15d9pc9-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-16uh2zh-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1qavo86-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-1vncjte-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1l32eh5-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1lhseqk-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1l32eh5-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-12lyweh-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-ew75yp-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-hqvw1n-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-1vncjte-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1ohlx0d-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-ddut8v-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1ohlx0d-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-2cvmn4-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-1s3znc7-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-lhbj00-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-1vncjte-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1cwb5x2-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-3ygi4n-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1cwb5x2-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1juhuxo-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;
